# ai-notebook

./: .gitignore  README.md  pyproject.toml
lesson-4/class/: entity_recognition.py  text_preprocessing.py  word_embeddings.py
lesson-4/exercises/: exercise-1.py  exercise-10.py  exercise-2.py  exercise-3.py  exercise-4.py  exercise-5.py  exercise-6.py  exercise-7.py  exercise-8.py  exercise-9.py
lesson-5/class/rag-01/: main.py
lesson-5/class/rag-02/: app.py
lesson-5/class/rag-02/data/: data.txt
lesson-5/class/rag-02/templates/: index.html
lesson-5/extra/extra-01/: main.py
