[project]
name = "ai-notebook"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "faiss-cpu>=1.12.0",
    "gensim>=4.4.0",
    "google-genai>=1.47.0",
    "nltk>=3.9.2",
    "numpy>=2.3.4",
    "sentence-transformers>=5.1.2",
    "spacy>=3.8.7",
]
